add another cat pic see: #2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <img src="https://static.scientificamerican.com/sciam/cache/file/1E3A3E62-B3CA-434A-8C3B3ED0C982FB69_source.jpg?w=590&h=800&C8DB8C57-989B-4118-AE27EF1191E878A5">
+<img src="https://static.scientificamerican.com/sciam/cache/file/1E3A3E62-B3CA-434A-8C3B3ED0C982FB69_source.jpg?w=590&h=800&C8DB8C57-989B-4118-AE27EF1191E878A5">
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
