--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script>
+    function greeting(){
+        document.getElementById("demo").innerHTML = "Hello Thanakom";
+        let name=prompt("Please input your name")
+        window.alert('Hello Thanakom')
+    }
+    function changeTored(){
+        document.getElementById('demo').style.color="red";
+        document.getElementById('demo').style.fontSize="30px";
+    }
+    function changeToDog(){
+        document.getElementById('pic').style.src="https://scontent.fbkk12-3.fna.fbcdn.net/v/t1.6435-9/95132237_103549848016210_8597914061415383040_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeEL8kvx7LhCY-d7uLPmozoA_UQhXg_hOyb9RCFeD-E7JmL0LeHNPWYkEM8Ibdqipmvs0M5HMIKVmMxCLtKGdw8h&_nc_ohc=IzI0w2O1lkAAX8QFF55&_nc_ht=scontent.fbkk12-3.fna&oh=00_AT-1Le3gHniOkmsw4zoiKRmwdWjNDuSVndFlz03JTCPIbw&oe=630FF546";
+    }
+    function changeToCat(){
+        document.getElementById('pic').style.src="https://images.unsplash.com/photo-1529778873920-4da4926a72c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y3V0ZSUyMGNhdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60";
+
+    }
+</script>
 <title>Page Title</title>
 </head>
 <body>
-<img src="https://static.scientificamerican.com/sciam/cache/file/1E3A3E62-B3CA-434A-8C3B3ED0C982FB69_source.jpg?w=590&h=800&C8DB8C57-989B-4118-AE27EF1191E878A5">
-<img src="https://static.scientificamerican.com/sciam/cache/file/1E3A3E62-B3CA-434A-8C3B3ED0C982FB69_source.jpg?w=590&h=800&C8DB8C57-989B-4118-AE27EF1191E878A5">
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
+    <!DOCTYPE html>
+<html>
+<body>
 
+<h2>My First JavaScript</h2>
+<img id ="pic" crc="cat.jpg"><br>
+<button type="button" onclick="changeToDog()">dog</button>
+<button type="button" onclick="changeToCat()">cat</button>
+<button type="button" onclick="greeting().innerHTML = 'Hello TaTa';
+window.alert('Thanakom')">
+Click me to display Date and Time.</button>
+<button type="button"
+onclick="changeTored().innerHTML = 'Hello TaTa';
+window.alert('Thanakom')">
+Click me to display Date and Time.</button>
+<img width="150" src="https://images.unsplash.com/photo-1529778873920-4da4926a72c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y3V0ZSUyMGNhdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"><br>
+<img width="150" src="https://scontent.fbkk12-3.fna.fbcdn.net/v/t1.6435-9/95132237_103549848016210_8597914061415383040_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeEL8kvx7LhCY-d7uLPmozoA_UQhXg_hOyb9RCFeD-E7JmL0LeHNPWYkEM8Ibdqipmvs0M5HMIKVmMxCLtKGdw8h&_nc_ohc=IzI0w2O1lkAAX8QFF55&_nc_ht=scontent.fbkk12-3.fna&oh=00_AT-1Le3gHniOkmsw4zoiKRmwdWjNDuSVndFlz03JTCPIbw&oe=630FF546">
+<p id="demo"></p>
+
+</body>
+</html> 
 </body>
 </html>
